internal/gatewayapi/testdata/xds/gateway-allows-same-namespace-with-disallowed-httproute.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
  status:
    listeners:
    - name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      attachedRoutes: 0
      conditions:
      - type: Ready
        status: "True"
        reason: Ready
        message: Listener is ready
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-1
  spec:
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-1
    rules:
    - matches:
      - path:
          value: "/"
      backendRefs:
      - name: service-1
        port: 8080
  status:
    parents:
    - parentRef:
        namespace: envoy-gateway
        name: gateway-1
      # controllerName: envoyproxy.io/gateway-controller
      conditions:
      - type: Accepted
        status: "False"
        reason: NotAllowedByListeners
        message: No listeners included by this parent ref allowed this attachment.
xdsIR:
  http:
  - name: envoy-gateway-gateway-1-http
    address: 0.0.0.0
    hostnames:
    - "*"
    port: 10080
